--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <div class="offset"></div>
         <div class = "navbar" id = "top-navbar">
             <img src="http://nss.iitd.ac.in/images/nss.png" class="logo">
-            <a class="nav-link" id ="home-button" href="#">Contact us</a>
+            <a class="active nav-link push" id ="home-button" href="#">Home</a>
             <a class="nav-link" id ="home-button" href="#">About</a>
-            <a class="active nav-link" id ="home-button" href="#">Home</a>
+            <a class="nav-link" id ="home-button" href="#">Contact</a>
             </div>
                 <div class="offset"></div>
             <div id = "upper-page-content" class = "centers">
@@ -25,11 +25,10 @@
             <p id ="heading"><span>NSS IIT Delhi</span>
                 <br>
             Be the change you wish to see in the world<br></p>
-                <button class="btn-top">Recent Events</button>
+                <button class="btn-top" onclick="">Recent Events</button>
                 </div>
         </div>
         </div>
-        <div class="clip">
         <div id = "cover" class = "cover">
             
             <div class="cards"><div class="image"><img src="http://nss.iitd.ac.in/images/icons/classroom.svg"/></div><div class="card-content"><h2><span>Teaching Projects</span></h2><hr><p>NSS IITD has a wide range of teaching projects covering primary education to training for JEE. We believe that education is the key to achieve our aim of Nation Building and focus on academic as well as Value based education. Our projects like Vidya, Aarohan, NEEM and a lot others work in this direction.</p></div></div>
@@ -38,7 +37,7 @@
             <div class="cards"><div class="image"><img src="http://nss.iitd.ac.in/images/icons/internship.svg"/></div><div class="card-content"><h2>Internships</h2><hr><p>In order to increase awareness about several social issues among the student community we conduct periodic lectures by eminent personalities working in the diverse social areas. With the same aim in mind, we also organize screenings of movies based on social themes.</p></div></div>
             <div class="cards"><div class="image"><img src="http://nss.iitd.ac.in/images/icons/workshop.svg"/></div><div class="card-content"><h2>Societies</h2><hr><p>We conduct several cloth collection drives (with Goonj), cleanliness drives, throughout the year. Besides, workshops on several themes like AIDS awareness, self defence, Right to Information etc are also organized. We also aim at finding some tech-based solution to day-to-day problems of the society.</p></div></div>
             <div class="cards"><div class="image"><img src="http://nss.iitd.ac.in/images/icons/projects.svg"/></div><div class="card-content"><h2>Environment</h2><hr><p>We encourage students to do projects related to environmental sustainability of the campus. We aim at decreasing the wastage of resources like food, electricity and Water and to sensitize the community towards rich flora and fauna of Nature. Our projects like Nature Lovers Animal Care and Green Warriors work for the very aim.</p></div></div>
-            </div></div>
+            </div>
         <div id="footer" class="footer">© CopyRights 2020. Developed and Published by Shaurya Mohan</div>
         <script src="active.js"></script>
     </body>
